fix unit alignment and size according to design (#737)
also, move prefix and suffix 1 pixel up because of wrapper height include border size and prefix has same height

--- a/src/Input/Input.scss
+++ b/src/Input/Input.scss
@@ -374,8 +374,6 @@ $material-gap: 8px;
 
 .unit {
     padding: 0 $gap;
-    font-size: 13px;
-    line-height: 18px;
     color: $paletteD3;
     @include FontLight();
 }
